# local-code-agent

./: .agent-workspace.json  .env.example  .gitignore  README.md  pyproject.toml  requirements.txt
app/: __init__.py  config.py  main.py
app/agents/: __init__.py  pipeline.py
app/api/: routes.py
app/core/: policies.py  security.py  workspaces.py
app/schemas/: __init__.py  openai.py  workspace.py
app/services/: chunker.py  embedding.py  indexer.py  ollama.py  retrieval.py  vector_store.py
app/tools/: __init__.py  sandbox_tools.py
app/utils/: errors.py  logger.py  network.py  platform.py
app/workspace/: __init__.py  commands.py  config.py  detector.py  session.py
infra/: docker-compose.qdrant.yml
local_cursor_agent.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
scripts/: curl-chat.ps1  index-workspace.ps1  run-agent.ps1  start-all.ps1  start-all.sh  start-qdrant.ps1  stop-all.ps1  stop-all.sh  stop-qdrant.ps1
tests/: test_chunker.py  test_error_handling.py  test_network_resolution.py  test_openai_schema.py  test_patch_sandbox.py  test_vector_retrieval.py  test_workspace_commands.py  test_workspace_config.py  test_workspace_detector.py
